--- a/admin/templates/admin_help_center.html
+++ b/admin/templates/admin_help_center.html
@@ -646,7 +646,7 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <script>
 // Help Center JavaScript
 function showSection(sectionId) {
