--- a/admin/templates/admin_system_logs.html
+++ b/admin/templates/admin_system_logs.html
@@ -166,7 +166,7 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <script>
 console.log('=== SYSTEM LOGS JAVASCRIPT LOADING ===');
 
