--- a/admin/templates/admin_maintenance_pause_system.html
+++ b/admin/templates/admin_maintenance_pause_system.html
@@ -250,7 +250,7 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <script>
     console.log('=== PAUSE SYSTEM JAVASCRIPT LOADING ===');
     console.log('Script block started');
