--- a/admin/templates/admin_maintenance_resume_system.html
+++ b/admin/templates/admin_maintenance_resume_system.html
@@ -258,7 +258,7 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <script>
     console.log('=== RESUME SYSTEM JAVASCRIPT LOADING ===');
     console.log('Script block started');
