--- a/admin/templates/user_management.html
+++ b/admin/templates/user_management.html
@@ -710,7 +710,7 @@
 
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     
