generally the session and websockets are working

--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -214,5 +214,7 @@
     <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
     
     {% block extra_js %}{% endblock %}
+    <!-- WebSocket Keep-Alive Script -->
+    <script src="{{ url_for('static', filename='js/websocket-keepalive.js') }}"></script>
 </body>
 </html>
