--- a/templates/includes/favicon_meta.html
+++ b/templates/includes/favicon_meta.html
@@ -37,5 +37,5 @@
 <!-- Theme colors -->
 <meta name="theme-color" content="#212529">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Vedfolnir">
